# claude-pulse

./: DOCS.md  dashboard.html  dex-research.html  index.html  package.json  research.html
daemon/: Cargo.toml
daemon/src/: main.rs
firmware/: Cargo.toml  README.md
firmware/src/: main.rs
hooks/: on_error.sh  on_prompt.sh  on_task_done.sh  on_task_start.sh
mcp/: install.sh  learning-server.js  memory-server.js  package.json  security-server.js
